--- a/src/assets/i18n/th.json
+++ b/src/assets/i18n/th.json
@@ -22,7 +22,8 @@
     "coffee_bar": "คอฟฟี่บาร์กาแฟ",
     "meeting_room": "ห้องประชุม",
     "tour_guide": "มัคคุเทศก์",
-    "salmon": "ปลาแซลมอนไต้หวัน"
+    "salmon": "ปลาแซลมอนไต้หวัน",
+    "itinerary": "Itinerary"
   },
   "translation": {
     "select_language": "เลือกภาษา",
@@ -31,7 +32,8 @@
   "long_stay": {
     "slogan": "พักยาวนานในยามว่างที่คุณอยากสัมผัส",
     "contain1": "เราคิดว่าสำหรับคุณและจะเปิดตัวโปรแกรมส่วนลดนี้เร็ว ๆ นี้",
-    "contain2": "ทุกคนสามารถวางแผนการเดินทาง ~~~ ส่วนลดสุด ๆ !"
+    "contain2": "ทุกคนสามารถวางแผนการเดินทาง ~~~ ส่วนลดสุด ๆ !",
+    "more_information": "More information..."
   },
   "auth": {
     "your_email": "อีเมลของคุณ",
@@ -181,6 +183,7 @@
     "notice": "แจ้งให้ทราบ",
     "notice_01": "ผู้โดยสารซึ่งรวมถึงที่พักของผู้มาเยือนต้องออกจากสถานีจ่ายเพื่อชำระค่าเข้าชม (เงินสดเท่านั้น) จากนั้นหยิบรถบัสเข้าฟาร์ม Wuling ป้ายรถประจำทางอยู่ใกล้กับศูนย์ผู้เยี่ยมชมของ Wuling ถ้าคุณอาศัยอยู่ใน Wuling Hotel โปรดแจ้งคนขับก่อนหน้านี้เพื่อแจ้งให้คุณทราบใน Welcome Bridge of Wuling Hotel.",
     "notice_02": "ข้อมูลอาจมีการเปลี่ยนแปลงขึ้นอยู่กับ บริษัท ขนส่งแต่ละแห่ง",
+    "by_van": "By van",
     "ego_bus": "ทัวร์ไต้หวัน e-go (เวลาในการเดินทางโดยประมาณ: 4 ชั่วโมง, ออกเดินทางทุกวันและต้องการสำรองห้องพักล่วงหน้า 5 วันโทร: + 886-2-27965696)",
     "ego_taipei_wuling": "ประตูทางออกหมายเลข 3 ของสถานีรถไฟไทเป→ยินดีต้อนรับ Bridge of Wuling Hotel 07:30 ",
     "ego_wuling_taipei": "สะพานยินดีต้อนรับโรงแรม Wuling →สถานีรถไฟไทเป 13:30 ",
@@ -188,6 +191,8 @@
     "bear_taipei_wuling": "ประตูทางออกหมายเลข 3 ของสถานีรถไฟไทเป→ศูนย์ผู้เยี่ยมชม Wuling 07:50",
     "bear_wuling_taipei": "ศูนย์บริการนักท่องเที่ยว Wuling →สถานีรถไฟไทเป 14:10",
     "lion_bus": "Lion Express (ไทเป→ Wuling Farm, โทรศัพท์: + 886-2-87939611)",
+    "lion_taipei_wuling": "East gate 3 of Taipei railway station →  Wuling visitor center  07:50",
+    "lion_wuling_taipei": "Wuling visitor center → Taipei railway station 14:10 ",
     "lion_website": "เว็บไซต์ Lion Express"
   },
   "restaurant": {
@@ -195,6 +200,8 @@
     "introduction": "พ่อครัวของโรงแรม Wuling Hotel หัวใจของพวกเขาในการออกแบบเมนูพิเศษตามฤดูกาลนำเสนองานเลี้ยงอาหารค่ำกะหล่ำปลีงานเลี้ยงแอปเปิ้ลงานเลี้ยงน้ำชาเป็นต้นไปเยี่ยมเยียนนักท่องเที่ยวทุกๆฤดู นักท่องเที่ยวที่ชื่นชอบการลองรสชาติใหม่ ๆ สามารถเลือกได้จากผลไม้อินทรีย์และผักที่แปลกใหม่ในเมือง เช่นแพงพวยเก็บเกี่ยวสด Ipomoea aquatica และมัสตาร์ด potherb ดองเช่นเดียวกับคนอื่น ๆ เพื่อเสริมประสบการณ์ highland ของพวกเขา",
     "fare": "ค่าอาหาร",
     "breakfast": "อาหารเช้า",
+    "lunch": "Lunch",
+    "dinner": "Dinner",
     "breakfast_family": "อาหารเช้าแบบจีน (สำหรับ 10 ท่าน) NT$ 1,500/โต๊ะ ",
     "location_Plum": "ร้านอาหารพลัมร้านเมเปิล",
     "breakfast_buffet": "บุฟเฟต์สไตล์ตะวันตกแบบจีนกับ NT$ 150/ท่าน",
@@ -207,7 +214,8 @@
     "lunch_set": "อาหารกลางวัน",
     "private_set": "ชุดบุคคล NT$ 300 ต่อชุดมีบริการอาหารมังสวิรัติ",
     "dinner_buffet": "บุฟเฟ่ต์",
-    "buffet_price": "บุฟเฟต์สไตล์ตะวันตกแบบจีนพร้อมบุฟเฟต์ NT$ 350/ท่าน"
+    "buffet_price": "บุฟเฟต์สไตล์ตะวันตกแบบจีนพร้อมบุฟเฟต์ NT$ 350/ท่าน",
+    "buffet_note": "When there are many guests, the dinner is divided into two periods: 17:30~18:50 and 19:00~20:20, which are distributed by the counter."
   },
   "ecotourism": {
     "ecology": "นิเวศวิทยา",
@@ -227,7 +235,8 @@
   },
   "peach": {
     "slogan": "2018 ลูกพีชที่ระบุไว้",
-    "contain": "มันเป็นฤดูกาลของการเก็บเกี่ยวพีช ภายใต้การเพาะปลูกของสภาพแวดล้อมทางธรรมชาติให้คุณซื้อส่วนที่เหลือมั่นใจได้กินความอุ่นใจ ฟาร์มเชิญชวนให้คุณแบ่งปันสิ่งที่ดีที่สุดในโลกและเพลิดเพลินกับทัศนียภาพที่สวยงามของ Wuling"
+    "contain": "มันเป็นฤดูกาลของการเก็บเกี่ยวพีช ภายใต้การเพาะปลูกของสภาพแวดล้อมทางธรรมชาติให้คุณซื้อส่วนที่เหลือมั่นใจได้กินความอุ่นใจ ฟาร์มเชิญชวนให้คุณแบ่งปันสิ่งที่ดีที่สุดในโลกและเพลิดเพลินกับทัศนียภาพที่สวยงามของ Wuling",
+    "price": "price list..."
   },
   "agricultural": {
     "products": "ผลิตภัณฑ์ ",
