--- a/src/assets/i18n/zh-tw.json
+++ b/src/assets/i18n/zh-tw.json
@@ -1,62 +1,52 @@
 {
   "toolbar": {
     "title": "武陵農場",
-    "administrative": "行政專區",
-    "membership": "會員服務"
+    "home": "首頁",
+    "lauguage": "語言選擇",
+    "Login": "登入",
+    "Regester": "註冊"
   },
   "home": {
     "attractions": "景點介紹",
-    "special_offer": "相關訊息",
-    "recent_activities": "近期活動",
-    "weather": "天氣",
-    "traffic_information": "路況",
     "hotel": "國民賓館",
     "camp_area": "露營",
-    "tea_saloon": "茶莊",
-    "visitor_center": "旅服中心",
+    "restaurant": "餐宴美食",
+    "ecotourism": "生態之旅",
     "orchard": "農特產品",
+    "special_offer": "相關訊息",
     "ticket_price": "門票價格",
     "transportation": "交通資訊",
-    "restaurant": "餐宴美食",
-    "ecotourism": "生態之遊",
-    "coffee_bar": "森林咖啡吧",
-    "meeting_room": "會議中心",
     "tour_guide": "導覽服務",
-    "salmon": "櫻花鉤吻鮭",
-    "itinerary":"行程建議"
-  },
-  "translation": {
-    "select_language": "請選擇語言",
-    "exit": "離開"
+    "itinerary": "行程建議",
+    "tea_saloon": "茶莊",
+    "visitor_center": "旅服中心",
+    "meeting_room": "會議中心",
+    "coffee_bar": "森林咖啡吧"
   },
   "long_stay": {
     "slogan": "Long-stay優惠方案",
     "contain1": "Long-stay旅居，接觸自身想體驗的休閒生活，從事想長期嚮往的生活、做自己想做的事、認識外地文化，武陵農場替您想到了，即將推出此優惠方案。",
-    "contain2": "大家可以好好規畫行程啦~~~超優惠的!!!"
+    "contain2": "大家可以好好規畫行程啦~~~超優惠的!!!",
+    "more_information": "更多訊息..."
   },
-  "auth": {
-    "your_email": "電子郵件信箱",
-    "your_password": "密碼"
+  "peach": {
+    "slogan": "2018年水蜜桃上市",
+    "contain": "現在正是水蜜桃採收的季節。在天然環境的栽培下，讓您買的放心，吃的安心。農場邀請您一起共享人間美味極品和欣賞武陵好風景。",
+    "price": "最新價格..."
   },
   "weather": {
-    "date": "日期",
-    "time": "時間",
-    "nowTemp": "溫度",
-    "minTemp": "低溫",
-    "rainpassible": "濕度",
-    "rainfall": "雨量"
-  },
-  "map": {
-    "location": "目前位置",
-    "airport": "機場出發"
+    "date": "資料日期",
+    "time": "資料時間",
+    "nowTemp": "目前氣溫",
+    "minTemp": "最低氣溫",
+    "rainpassible": "相對濕度",
+    "rainfall": "累積雨量"
   },
   "wuling-hotel": {
-    "title": "賓館介紹",
-    "introduction": "武陵農場提供的住宿服務有兩人房、三人房、四人房、六人房，包括武陵國民賓館、休閒農莊(文康館、桃花莊、農莊和室區)、山水館等多樣化的住宿提供遊客選擇。價格則從每間客房$3420至$7500 元不等，稱得上物美價廉，非假日期間，尚有特惠專案推出，機會難得，敬請把握，欲知詳情，請來電洽詢。本場為國民旅遊卡特約商店，歡迎使用。",
-    "shanshui_villa": "山水館",
+    "introduction": "本場提供武陵國民賓館、休閒農莊及山水館等多樣化的住宿及房型選擇。提供兩人房、三人房、四人房、六人房及無障礙房間，價格則從每間客房$3420至$7500 元不等。",
     "wuling_hotel": "國民賓館",
+    "shanshui_villa": "山水館",
     "leisure_farm_villa": "休閒農莊",
-    "room_type": "房型名稱",
     "price": "定價",
     "general_people": "一般民眾",
     "special": "軍公教",
@@ -64,75 +54,105 @@
     "note": "床型 備註",
     "weekdays": "平日",
     "holiday": "假日",
-    "creek_building": "溪樓.雙人套房",
+    "creek_building": "溪樓.2人套房",
     "honeymoon_suite": "蜜月套房",
-    "maple_cottage": "楓林木屋(雙人套房)",
-    "family_suite": "四人套房",
-    "japanese_style": "六人閣樓和室套房",
-    "two_single": "兩小床",
-    "one_king": "一大床",
-    "two_double": "兩大床",
-    "one_double_two_single": "一大兩小床",
-    "one_double_one_single": "一大床、一小床",
-    "four_mattresses": "4個單人床墊",
-    "notice_01": "本價目表均含早晚餐(一泊二食)，不含入場門票及停車費。",
-    "notice_02": "訂房價優惠(訂房價=定價-餐費；餐費一律不折扣)",
-    "notice_03a": "平日: 一般民眾為8折，網路訂位為75折，「軍、公、教、具榮譽證之陸軍第一特種兵、原住民、身心障礙、志工、六十五歲以上老人、低收入戶、永久居留證註記公立育樂場所優待之外籍人士」為7折，榮民為55折。",
-    "notice_03b": "假日: 一般民眾為定價，軍、公、教、具榮譽證之陸軍第一特種兵、原住民、身心障礙、志工、六十五歲以上老人、低收入戶、永久居留證註記公立育樂場所優待之外籍人士、榮民均為9折。網路訂位95折，連續假期及春節無折扣，寒暑假期間依本場規定。",
-    "notice_04a": "一泊二食價格如何計算? 每人餐費為500元，以桃花莊(雙人套房)為例，一般民眾平日為",
-    "notice_04b": "2936元=(3420-1000)*80%+1000。",
-    "notice_05": "軍、公、教、具榮譽證之陸軍第一特種兵、原住民、身心障礙、志工、六十五歲以上老人、低收入戶、永久居留證註記公立育樂場所優待之外籍人士、榮民限本人攜帶相關證件親臨櫃台登記入住，才可享有個人優惠，一張證件折扣一間房間，不再適用旅行社或遊覽公司團體優惠。",
-    "notice_06": "使用住宿優惠卷者不得與軍、公、教、具榮譽證之陸軍第一特種兵、原住民、身心障礙、志工、六十五歲以上老人、低收入戶、永久居留證註記公立育樂場所優待之外籍人士、榮民身分之折扣同時併用，並不得與其他優惠專案同時併用。",
-    "peach_double": "桃花莊 (雙人套房)",
-    "peach_quadruple": "桃花莊 (四人套房)",
-    "wunkang_big": "文康館三人房(大)",
-    "wunkang_small": "文康館三人房(小)",
-    "wunkang_japenese": "文康館和室區 (四人套房)",
-    "farm_japenese": "農莊和室區(四人套房)",
-    "salmon_room": "山水館(鮭魚)雙人房",
-    "peach_room": "山水館(水蜜桃)雙人房",
-    "maple_room": "山水館(楓葉)雙人房",
-    "apple_Plum": "山水館四人(蘋果、梅花)房",
-    "cherry_room": "山水館四人(櫻花)房"
+    "family_suite": "4人套房",
+    "japanese_style": "6人閣樓和室套房",
+    "maple_cottage": "楓林木屋.2人套房",
+    "peach_double": "桃花莊.2人套房",
+    "peach_quadruple": "桃花莊.4人套房",
+    "wunkang_big": "文康館.大間3人房",
+    "wunkang_small": "文康館.小間3人房",
+    "wunkang_japenese": "文康館和室區.4人套房",
+    "farm_japenese": "農莊和室區.4人套房",
+    "salmon_room": "鮭魚.雙人套房",
+    "peach_room": "水蜜桃.雙人房",
+    "maple_room": "楓葉.雙人房",
+    "apple_Plum": "蘋果、梅花.四人房",
+    "cherry_room": "櫻花.四人房",
+    "two_single": "2小床",
+    "one_king": "1大床",
+    "two_double": "2大床",
+    "one_double_two_single": "1大 + 2小床",
+    "one_double_one_single": "1大床 + 1小床",
+    "four_mattresses": "單人床墊"
   },
   "campsite": {
-    "title": "露營區介紹",
     "about": "武陵農場露營區位在高山植物園區，園區內設有生態水池、水中植物池、中藥園區、草園區、花海區等，群山環繞，由雪山管制站至七卡山莊，可清楚地望見無名峰、中央尖山、南湖大山群峰、羅葉尾峰、桃山；山嵐水色，自然天成，是國內難得的天然避暑樂園。",
-    "order_notice": "露營區於當月1日上午08:00開放系統訂位(含當月3個月)",
-    "order_example": "例如 : 5月1日上午08:00開放訂位至7月31日止12月1日上午08:00開放訂位至次年2月底止",
-    "telephone": "露營區專線 04-25901470 / 04-25901265　露營區傳真電話 04-25901088",
-    "coffee_bar": "於露營管理中心旁,設有森林咖啡吧,30年樹齡的柳杉矗立在旁喝杯武陵農場特製薰衣草奶茶，與芬多精來場森林的約會！",
-    "alert": "為確保森林安全，嚴禁火苗與地面接觸，僅能以氣化爐或烤肉架方式煮食。本露營區提供完善衛浴設備，24小時供應熱水。",
-    "rule": "本露營區因位於雪霸國家公園範圍內，請露營遊客遵守下列規定：",
-    "rule_01": " 露營區內嚴禁營火﹑點火把﹑放爆竹，烤肉要用烤肉架，碳火不可直接接觸地面。",
-    "rule_02": "露營區內不得攜帶寵物，相關規定依林務局公告。",
-    "rule_03": "不可任意攀折花卉﹑樹木及採擷水果。",
-    "rule_04": "露營區內垃圾分廚餘回收及一般垃圾（內含資源回收物品）二種。",
-    "rule_05": "營區內不得使用發電機及高分貝音響設備。",
-    "rule_06": "營區內遊客晚間十時以後禁止喧嘩，及請停止您的活動並放低音量，以免影響別人安寧。",
-    "rule_07": "進住空帳的遊客，請勿於空帳內食用糖果餅乾等零食，避免蟲蟻入內。",
-    "rule_08": "露營位搭營時間中午12:00，拔營時間次日中午12:00。",
-    "rule_09": "2人可愛屋、4人景觀屋、和室房進住時間下午14:00，退房時間次日上午11:00。",
-    "rule_10": "露營區森林咖啡吧提供早餐、飲料、三明治、蛋餅、雞絲麵等餐點。",
-    "rule_11": "露營管理中心營業時間AM7:00~PM21:30。",
-    "rule_12": "非露營區住客在露營區內炊煮每6人收取炊煮場地費200元、12人400元依此類推收費。",
-    "rule_13": "旅客進入露營區時，務必到管理中心報到，索取統一發票作為使用露營區證明。",
-    "rule_15": "本露營區各區夜間均有照明設施。",
-    "rule_16": "熱水供應時間: A1、D、E區公共浴廁：24hr熱水(每日)，有吹風機。 管理中心兩側公共浴廁：鍋爐供應熱水時間17:00~22:00（僅於假日提供)，僅有一間24hr 供熱水(男、女皆為最後一間 )，有吹風機。",
-    "rule_17": "管理中心前有公用插座、電冰箱一台提供遊客使用。",
-    "rule_18": "露營區所有之訂位，包括營位及木屋等，若當日未完成匯款程序，露營區保有刪除之權利。"
+    "camp_pallet": "露營營位",
+    "price": "定價",
+    "remark": "備註",
+    "a1_car_pallet": "A區、A1區汽車棧板",
+    "a1_car_pallet_type": "須自搭營帳，木棧板營位 。(A1區為300cm*300cm，A區為320cm*300cm)。",
+    "a1_car_pallet_remark": "電源插座乙座、專屬餐桌、使用A1區公共浴廁、專屬車位。",
+    "b_tent": "B區空中帳篷",
+    "b_tent_type": "已搭有營帳，睡墊 (210cm*240cm)。架高50cm(B)或80cm(BA)。",
+    "b_tent_remark": "有電源插座、專屬餐桌、使用管理中心兩側公共浴廁、使用公共停車場、『寵物禁止入內』。",
+    "c_tent": "C區離地空帳",
+    "c_tent_type": "已搭有營帳、睡墊(240cm*240cm)。",
+    "c_tent_remark": "電源插座乙座、專屬餐桌、使用管理中心浴廁、專屬車位。",
+    "c_car_pallet": "C區汽車棧板營位",
+    "c_car_pallet_type": "須自搭營帳、木棧板營位。(420cm*420cm)。",
+    "c-car_pallet_remark": "電源插座乙座、專屬餐桌、使用管理中心浴廁、專屬車位。",
+    "d_car_pallet": "D1區汽車棧板營位",
+    "d_car_pallet_type": "須自搭營帳，木棧板營位 。(300cm*320cm)。",
+    "d-car_pallet_remark": "有電源插座、專屬餐桌、使用D區公共浴廁、專屬車位。",
+    "e_car_pallet": "D、E區汽車棧板",
+    "e_car_pallet_type": "須自搭營帳，木棧板營位 (D1~D12為300cm*320cm，其餘為220cm*320cm)。",
+    "e-car_pallet_remark": "有電源插座、專屬餐桌、使用D區/E區公共浴廁、專屬車位。",
+    "camp_cottage": "露營屋",
+    "a1_cottage": "A1.區景觀屋",
+    "weekdays": "平日",
+    "holiday": "假日",
+    "a1_cottage_type": "有照明燈，軟墊 (240cm*240cm)，寢具須自備，可睡4~5人。",
+    "al_cottage_remark": "有電源插座(僅供手機充電)、專屬餐桌、使用A1區公共浴廁、專屬車位、『寵物禁止入內』",
+    "a_cottage": "A、D區.可愛露營屋",
+    "a_cottage_type": "有照明燈，軟墊 (195cm*195cm)，可睡3人，寢具須自備。",
+    "a_cottage_remark": "有電源插座(僅供手機充電)、專屬餐桌、使用A1區/D區公共浴廁、專屬車位、『寵物禁止入內』。",
+    "b_cottage": "B區.彩繪屋",
+    "b_cottage_type": "睡墊 (187cm*220cm)、高100cm(BH)。",
+    "b_cottage_remark": "有電源插座、專屬餐桌、使用管理中心兩側公共浴廁、使用公共停車場、『寵物禁止入內』。",
+    "d_cottage": "D1區.築夢屋",
+    "d_cottage_type": "位於D1區露營區新式小木屋，可睡2+1人。",
+    "d_cottage_remark": "有電源插座(僅供手機充電)、專屬餐桌、使用D區公共浴廁、專屬車位、『寵物禁止入內』。"
   },
-  "tea_saloon": {
-    "name": "武陵農場茶莊",
-    "tel": "電話：04-25901268 ",
-    "fax": "傳真：04-25901081 ",
-    "address": "地址：42495台中市和平鄉平等里武陵路7-7號(茶莊)"
+  "restaurant": {
+    "environment": "用餐環境",
+    "introduction": "賓館大廚配合時令，精心調製推出具有特色的高麗菜大餐、蘋果大餐、茶葉餐等、平日在山下吃不到的有機蔬果、以及現採高山野菜，提供給喜愛嘗鮮的遊客最佳選擇。",
+    "fare": "餐飲介紹",
+    "breakfast": "早餐",
+    "lunch": "午餐",
+    "dinner": "晚餐",
+    "breakfast_family": "中式早餐(十人份) NT$1500/桌。",
+    "location_Plum": "用餐地點:梅花廳/楓味廳。",
+    "breakfast_buffet": "中西式自助餐  NT$150/人，小朋友100元(身高115cm~150cm)，國中生以上 NT$ 150/人。",
+    "breakfast_item": "包含粥品、咖啡、豆漿、武陵茶、饅頭、現烤吐司、當季蔬菜等。",
+    "location_hotel": "用餐地點:國民賓館。",
+    "family_style": "團體合菜",
+    "family_seven": "七菜一湯合菜(十人份) NT$3000/桌(限午餐)。",
+    "family_eight": "八菜一湯合菜(十人份) NT$3500/桌。",
+    "family_item": "菜色(依季節變化)",
+    "lunch_set": "中午半自助式套餐",
+    "private_set": "半自助式套餐 NT$300/人，小朋友170元(身高115cm~150cm),國中生以上 NT$ 300/人，亦有供應素食。",
+    "dinner_buffet": "自助式晚餐",
+    "buffet_price": "自助餐 NT$350/人，小朋友200元(身高115cm~150cm)，國中生以上 NT$ 350/人。",
+    "buffet_note": "住客眾多時，晚餐分為兩個時段用餐17:30~18:50及19:00~20:20，由櫃台統籌分配。"
   },
-  "visitor_center": {
-    "name": "武陵農場旅服中心",
-    "tel": "電話：04-25901257分機：1118 ",
-    "fax": "專線：04-25901353 ",
-    "address": "地址：42495台中市和平鄉平等里武陵路3號(旅服中心) "
+  "ecotourism": {
+    "ecology": "生態介紹",
+    "according": "根據「雪山、大霸尖山地區動物生態資源先期調查研究」之紀錄及現地調查農場的動物可分成下列幾類：",
+    "zoological": "動物資源",
+    "zoological_resources": "包括冠羽畫眉、青背山雀、紅頭山雀、巨嘴鴨、火冠戴菊鳥、虎鶇 、繡眼畫眉、河烏、鉛色水鶇、盤古蟾蜍、梭德式赤蛙、斯文豪式赤蛙、曙鳳蝶、大紅紋鳳蝶、雪螢、山羌、鴛鴦等豐富的動物資源。94年8月下旬至94年11月底的動物資源調查結果顯示，區內計有昆蟲28種、爬蟲類4種、鳥類19種。另依中華民國野鳥學會鳥類資料庫的統計資料顯示，近3年所獲致的150比調查紀錄中、共有147種鳥類。其中、特有種鳥類共記錄到12種，站本島特有鳥類的85.7%。",
+    "zoological_suggest": "【動物資源 生態之旅】中北谷景觀林帶(含賞蝶賞鳥步道)。",
+    "botanical": "植物資源",
+    "botanical_resources": "武陵農場的海拔高度正是台灣原生種櫻樹最適合生長的地方，包括台灣原生山櫻花、霧社櫻等，而台灣紅榨槭、楓香、青楓、山枇杷、青剛櫟等植物則處處可見。區內並擁有相當多與林火有關之植物，如台灣二葉松、栓皮櫟以及杜鵑。根據94年8月下旬至94年11月底所做的植物資源調查結果顯示，區內植物資源包括蕨類植物8科24種、裸子植物3科5種、雙子葉植物56科161種、單子葉植物7科15種，植物資源相當豐富。",
+    "botanical_suggest": "【植物資源 生態之旅】1.原野遊憩及高山植物生態園區　2.農業生態、教學、觀察及體驗園區。",
+    "historical": "歷史文物",
+    "historical_resources": "場區內的蔣公行館，係先總統 蔣公偕夫人在本省各風景區所設置的休憩行館之一。建於民國57年夏天，館內設有臥房3間，餐廳、廚房、客廳、寫字間各一間，陳設簡單，樸實無華。行館右側為侍衛住所，屋舍外貌均保留原有樣貌。 蔣公行館及侍衛住所前並種有蔣公及夫人勤值的梅花各一株，稱為梅王及梅后。場區內的誠、親、民、善等農莊，為早期農民弟兄就地取材堆砌而成的三合院石頭屋建築，供懇員共同居住、集耕合營生產，胼手胝足開挳出上百公頃良田。寢室內僅擺設簡單的床鋪、桌椅、寢飾外則有簡易的庫房以堆放農用資材與工具，現今僅餘6戶榮民家庭散居於親莊及民莊安享天年。為提供遊客見證武陵農場的開發過程及榮民的山地開發血淚史，已設置農莊文物館，呈現當年榮民弟兄辛苦開墾的照片、農具及生活文物。",
+    "historical_suggest": "【歷史文物 生態之旅】北谷農業景觀區（含榮民農莊文化）。",
+    "cultural": "七家灣文化遺址",
+    "cultural_resources": "七家灣遺址位於武陵遊憩區西南側山麓，恰在雪霸國家公園武陵遊客中心西南側約200公尺的階地及緩坡上面，為目前台灣所發現海拔最高的新石器時代遺址，也是台灣地區位至最高的陶器聚落遺址。係民國86年，中研院史語所劉益昌研究員接受雪霸國家公園委託，進行「大甲溪上游史前遺址與早期原住民活動跳查」計畫時所發現。並於民國87年至90年，開始進行系統話試掘與搶救發掘工作。本場為保存此遺址，將文物置於武陵富野渡假村大廳展示。",
+    "cultural_suggest": "【七家灣文化遺址 生態之旅】南谷遊憩生態園區（含七家灣遺址原住民文化）"
   },
   "ticket": {
     "ticket_price": "武陵農場入門票收費表",
@@ -141,8 +161,8 @@
     "holiday": "假日",
     "full": "一般個人（全票）",
     "half": "65歲以上長者、低收入者、兒童。",
-    "civil": "軍公教、原住民、陸一特、團體（30人以上）、學生、僑胞卡。團體（30人以上）。",
-    "veteran": "榮民（隨行之配偶及直系親屬）第二類退除役官兵權益卡、榮譽志工、身心障礙者（護障1人）幼兒（學齡前）、原住民（梨山、環山、南山地區原住民）設籍和平區居民。",
+    "civil": "軍公教、原住民、陸一特、團體（30人以上）、學生、僑胞卡。",
+    "veteran": "榮民（隨行之配偶及直系親屬）、第二類退除役官兵權益卡、榮譽志工、身心障礙者（護障1人）幼兒（學齡前）、原住民（梨山、環山、南山地區原住民）設籍和平區居民。",
     "veteran_remark": "（免費，但需收10元保險費）",
     "vehicle": "車輛費",
     "vehicle_fee": "大型車/輛 NT$80，小型車、重型機車/輛 NT$50 ，機車/輛 NT$10。",
@@ -166,69 +186,72 @@
     "taichung_path": "國道六號（或中投快速道路）→埔里→霧社→合歡山→梨山→武陵(行車時間約5小時)",
     "hualien": "花蓮",
     "hualien_path": "太魯閣→大禹嶺→梨山→武陵(行車時間約4.5時)",
-    "by_bus": "搭乘大眾交通運輸工具至武陵農場",
+    "by_bus": "搭乘客運",
     "kuo-kuang": "國光客運(全程2小時40分鐘)",
-    "yilan_wuling": "【1751】宜蘭~武陵   07:30、12:40 ",
-    "wuling_yilan": "【1751】武陵~宜蘭     09:10、14:10 ",
-    "luodong_wuling": "【1764】羅東~武陵     07:00、12:00",
-    "wuling_luodong": "【1764】武陵~羅東   13:40",
+    "yilan_wuling": "【1751】宜蘭~武陵  發車時間 07:30、12:40 ",
+    "wuling_yilan": "【1751】武陵~宜蘭   發車時間  09:10、14:10 ",
+    "luodong_wuling": "【1764】羅東~武陵   發車時間 07:00、12:00",
+    "wuling_luodong": "【1764】武陵~羅東  發車時間 13:40",
     "kao_kuang_roadmap": "國光客運路線圖",
     "kao_kuang_fee": "國光客運票價表",
     "fengyuan_bus": "豐原客運(全程6小時)",
-    "fengyuan_wuling": "【6506】豐原~梨山 09:10 梨山~武陵 17:00",
-    "wuling_fengyuan": "【6506】武陵~梨山 06:30 梨山~豐原 08:00",
+    "fengyuan_wuling": "【6506】豐原~梨山 發車時間 09:10 梨山~武陵 發車時間 17:00",
+    "wuling_fengyuan": "【6508】武陵~梨山 發車時間 06:30 梨山~豐原 發車時間 08:00",
     "fengyuan_website": "台中豐原客運網站",
     "advice": "中南部的朋友建議從台北出發，發車班次較多。",
     "notice": "注意事項",
     "notice_01": "一般遊客或住宿旅客進入武陵農場時皆需自行下車購買門票，再上車到達公車停靠站(旅遊服務中心附近)，若您的目的地是國民賓館，請事先告知司機以便提早下車。",
     "notice_02": "班車資訊如有變動依各家客運公告為準。",
-    "ego_bus": "台灣觀光巴士(全程4小時，每天發車，需72小時前訂車，電話02-27965696)",
-    "ego_taipei_wuling": "台北火車站-東3入口~迎賓橋~醫療站~富野渡假村   07:30  ",
-    "ego_wuling_taipei": "富野渡假村大門~醫療站~迎賓橋~台北火車站  13:30  ",
+    "by_van": "搭乘專車",
+    "ego_bus": "台灣觀光巴士(全程4小時，每天發車，需3天前訂車，電話02-27965696)",
+    "ego_taipei_wuling": "台北火車站-東3入口~迎賓橋~醫療站~富野渡假村。發車時間 07:30",
+    "ego_wuling_taipei": "富野渡假村大門~醫療站~迎賓橋~台北火車站。發車時間 13:30",
     "bear_bus": "梨山熊巴士(全程4小時，每天發車，需7天前訂車，電話04-22653939)",
-    "bear_taipei_wuling": "台北火車站(東3入口)~武陵農場遊客中心  07:50 ",
-    "bear_wuling_taipei": "武陵農場遊客中心~台北火車站 14:10 ",
-    "lion_bus": "雄獅通運巴士(台北-武陵交通專線，訂位電話02-87939611)",
+    "bear_taipei_wuling": "台北火車站(東3入口)~武陵農場遊客中心。發車時間 07:50",
+    "bear_wuling_taipei": "武陵農場遊客中心~台北火車站。發車時間 14:10",
+    "lion_bus": "雄獅通運巴士(台北-武陵交通專線，全程4小時，每天發車，需3天前訂車，訂位電話02-87939611)",
+    "lion_taipei_wuling": "台北火車站站前門市集合~武陵農場遊客中心。發車時間 06:40",
+    "lion_wuling_taipei": "武陵農場遊客中心~台北火車站。發車時間 16:30",
     "lion_website": "雄獅通運巴士網站"
   },
-  "restaurant": {
-    "environment": "用餐環境",
-    "introduction": "賓館大廚配合時令，精心調製推出具有特色的高麗菜大餐、蘋果大餐、茶葉餐等、平日在山下吃不到的有機蔬果、以及現採野生水芹菜、水空心菜、雪裡紅等高山野菜，提供給喜愛嘗鮮的遊客最佳選擇。",
-    "fare": "餐飲介紹",
-    "breakfast": "早餐",
-    "breakfast_family": "中式早餐(十人份) NT$1500/桌。",
-    "location_Plum": "用餐地點:梅花廳/楓味廳。",
-    "breakfast_buffet": "中西式自助餐  NT$150/人。",
-    "breakfast_item": "包含粥品、咖啡、豆漿、武陵茶、饅頭、現烤吐司、當季蔬菜等。",
-    "location_hotel": "用餐地點:國民賓館。",
-    "family_style": "團體合菜",
-    "family_seven": "七菜一湯合菜(十人份) NT$3000/桌(限午餐)。",
-    "family_eight": "八菜一湯合菜(十人份) NT$3500/桌。",
-    "family_item": "菜色(依季節變化)：涼拌哲絲．涼拌翡翠絲．涼拌牛肚絲．蔥油鮮魚．蒸什錦點心．茶葉豬腳．酥炸蚵捲．酥炸芝麻球．高山高麗菜．蜜桃蟳肉．蜜桃山豬肉．杏鮑菇燴芥菜．炒飯、炒麵。",
-    "lunch_set": "中午套餐",
-    "private_set": "個人套餐每人 NT$300，亦有供應素食。",
-    "dinner_buffet": "自助式晚餐",
-    "buffet_price": "中西式自助餐每人 NT$350"
+  "tour_guide": {
+    "north_bus": "北谷區深度導覽遊園巴士",
+    "north_price": "北谷遊園巴士生態導覽 150元/人，小朋友學齡前佔位100元，不佔位免費",
+    "north_weekdays": "平日:星期一至星期五",
+    "north_morniing": "上午 9:00~11:00",
+    "north_afternoon": "下午14:30~16:30",
+    "weekend": "假日:星期六至星期日",
+    "holiday": "暑假:星期一至星期日",
+    "weekend_morning": "上午08:00~10:00；10:00~12:00",
+    "weekend_afternoon": "下午13:30~15:30；15:30~17:30",
+    "notice": "請提前預約，發車時段視預約狀況調整。",
+    "north_program": "北谷園區行程",
+    "north_procedure": "武陵賓館出發→觀魚台(櫻花鉤吻鮭)→雪山登山口→露營區森林咖啡吧 →武陵茶莊(全程約2小時)。",
+    "south_waker": "南谷園區步行導覽解說",
+    "south_price": "南谷生態導覽 免費",
+    "south_guide": "藉由解說員生動活潑導覽介紹，讓每位遊客徜徉在青山綠水的大自然懷抱下，同時能了解大自然生態之美，豐富您優質的遊程。",
+    "south_morning":"上午08:30 ~ 10:30",
+    "south_afternoon":"下午14:30 ~ 16:30",
+    "south_program":"南谷園區行程",
+    "south_procedure":"武陵賓館出發→迎賓橋→賞鳥步道→松林大道→蔣公行館→武陵茶莊(全程步行，約2小時)。"
   },
-  "ecotourism": {
-    "ecology": "生態介紹",
-    "according": "根據「雪山、大霸尖山地區動物生態資源先期調查研究」之紀錄及現地調查農場的動物可分成下列幾類：",
-    "zoological": "動物資源",
-    "zoological_resources": "包括冠羽畫眉、青背山雀、紅頭山雀、巨嘴鴨、火冠戴菊鳥、虎鶇 、繡眼畫眉、河烏、鉛色水鶇、盤古蟾蜍、梭德式赤蛙、斯文豪式赤蛙、曙鳳蝶、大紅紋鳳蝶、雪螢、山羌、鴛鴦等豐富的動物資源。94年8月下旬至94年11月底的動物資源調查結果顯示，區內計有昆蟲28種、爬蟲類4種、鳥類19種。另依中華民國野鳥學會鳥類資料庫的統計資料顯示，近3年所獲致的150比調查紀錄中、共有147種鳥類。其中、特有種鳥類共記錄到12種，站本島特有鳥類的85.7%。",
-    "zoological_suggest": "【動物資源 生態之旅】中北谷景觀林帶(含賞蝶賞鳥步道)。",
-    "botanical": "植物資源",
-    "botanical_resources": "武陵農場的海拔高度正是台灣原生種櫻樹最適合生長的地方，包括台灣原生山櫻花、霧社櫻等，而台灣紅榨槭、楓香、青楓、山枇杷、青剛櫟等植物則處處可見。區內並擁有相當多與林火有關之植物，如台灣二葉松、栓皮櫟以及杜鵑。根據94年8月下旬至94年11月底所做的植物資源調查結果顯示，區內植物資源包括蕨類植物8科24種、裸子植物3科5種、雙子葉植物56科161種、單子葉植物7科15種，植物資源相當豐富。",
-    "botanical_suggest": "【植物資源 生態之旅】1.原野遊憩及高山植物生態園區　2.農業生態、教學、觀察及體驗園區。",
-    "historical": "歷史文物",
-    "historical_resources": "場區內的蔣公行館，係先總統 蔣公偕夫人在本省各風景區所設置的休憩行館之一。建於民國57年夏天，館內設有臥房3間，餐廳、廚房、客廳、寫字間各一間，陳設簡單，樸實無華。行館右側為侍衛住所，屋舍外貌均保留原有樣貌。 蔣公行館及侍衛住所前並種有蔣公及夫人勤值的梅花各一株，稱為梅王及梅后。場區內的誠、親、民、善等農莊，為早期農民弟兄就地取材堆砌而成的三合院石頭屋建築，供懇員共同居住、集耕合營生產，胼手胝足開挳出上百公頃良田。寢室內僅擺設簡單的床鋪、桌椅、寢飾外則有簡易的庫房以堆放農用資材與工具，現今僅餘6戶榮民家庭散居於親莊及民莊安享天年。為提供遊客見證武陵農場的開發過程及榮民的山地開發血淚史，已設置農莊文物館，呈現當年榮民弟兄辛苦開墾的照片、農具及生活文物。",
-    "historical_suggest": "【歷史文物 生態之旅】北谷農業景觀區（含榮民農莊文化）。",
-    "cultural": "七家灣文化遺址",
-    "cultural_resources": "七家灣遺址位於武陵遊憩區西南側山麓，恰在雪霸國家公園武陵遊客中心西南側約200公尺的階地及緩坡上面，為目前台灣所發現海拔最高的新石器時代遺址，也是台灣地區位至最高的陶器聚落遺址。係民國86年，中研院史語所劉益昌研究員接受雪霸國家公園委託，進行「大甲溪上游史前遺址與早期原住民活動跳查」計畫時所發現。並於民國87年至90年，開始進行系統話試掘與搶救發掘工作。本場為保存此遺址，於武陵賓館二樓。",
-    "cultural_suggest": "【七家灣文化遺址 生態之旅】南谷遊憩生態園區（含七家灣遺址原住民文化）"
+  "tea_saloon": {
+    "name": "武陵農場茶莊",
+    "tel": "電話：04-25901268 ",
+    "fax": "傳真：04-25901081 ",
+    "address": "地址：42495台中市和平鄉平等里武陵路7-7號(茶莊)"
   },
-  "peach": {
-    "slogan": "2018年水蜜桃上市",
-    "contain": "現在正是水蜜桃採收的季節。在天然環境的栽培下，讓您買的放心，吃的安心。農場邀請您一起共享人間美味極品和欣賞武陵好風景。"
+  "visitor_center": {
+    "name": "武陵農場旅服中心",
+    "tel": "電話：04-25901257分機：1118 ",
+    "fax": "專線：04-25901353 ",
+    "address": "地址：42495台中市和平鄉平等里武陵路3號(旅服中心) "
+  },
+  "traffic": {
+    "road_status": "路況公告",
+    "notice_date": "日期",
+    "notice_section": "路段",
+    "notice_contect": "內容"
   },
   "agricultural": {
     "products": "農特產品",
